--- a/src/main/webapp/WEB-INF/views/book/index.html
+++ b/src/main/webapp/WEB-INF/views/book/index.html
@@ -18,6 +18,10 @@
     <form th:method="GET" th:action="@{/book/new}">
         <button type="submit">Добавить новую книгу</button>
     </form>
+    <br>
+    <form th:method="GET" th:action="@{/book/search}">
+        <button type="submit">Поиск книги</button>
+    </form>
 </div>
 </body>
 </html>
